<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/login_title" />
    
    <TextView 
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/username" />
    
    <EditText 
        android:id="@+id/t_username"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textCapCharacters" />

    <TextView 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/password" />
    
    <EditText 
        android:id="@+id/t_password"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"/>
    
    <Button 
        android:id="@+id/b_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/login"
        />
    <Button 
        android:id="@+id/b_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/register"
        />
    

</LinearLayout>